--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,18 @@
             android:name=".Lecturers"
             android:label="@string/title_activity_lecturers"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TimeTable"></activity>
+        <activity
+            android:name=".TimeTable"
+            android:label="@string/title_activity_time_table"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Publications"
+            android:label="@string/title_activity_publications"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Todo"
+            android:label="@string/title_activity_todo"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
